# LoanAgent

./: .gitignore  DATABASE_SCHEMA_ANALYSIS.md  README.md  ps01_master_plan.md
backend/: .env.example  .gitignore  check_summary.py  config.py  main.py  out.json  out10.json  out2.json  out3.json  out4.json  out5.json  out6.json  out7.json  out8.json  out9.json  pyproject.toml  start.bat  start.py  start.sh  test.py  test_chat_integration.py
backend/agent/: __init__.py  core_nodes.py  edges.py  graph.py  handlers.py  helpers.py  language.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
backend/api/: admin_routes.py  auth_routes.py  chat_routes.py  session_routes.py
backend/auth/: models.py  user_store.py  utils.py
backend/data/: loan_products.json
backend/memory/: __init__.py  encryption.py  loan_knowledge_store.py  models.py  retriever.py  sqlite_store.py  sqlite_store_simplified.py  vector_store.py
backend/scripts/: ingest_loan_data.py
backend/utils/: observability.py  ollama_client.py  summarizer.py  tokenizer.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/component/: AdminPanel.jsx  Home.jsx  ParticleBackground.jsx  dashboard.jsx  loanCalculator.jsx  login.jsx  signup.jsx
src/: main.jsx
src/component/: login.jsx
